--- a/merge-with-census.ipynb
+++ b/merge-with-census.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +138,7 @@
        "True"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -257,30 +257,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "# A tibble: 25,597 × 5\n",
-      "   GEOID       NAME                                   variable    estimate   moe\n",
-      "   <chr>       <chr>                                  <chr>          <dbl> <dbl>\n",
-      " 1 36005000100 Census Tract 1; Bronx County; New York population      4446   616\n",
-      " 2 36005000100 Census Tract 1; Bronx County; New York white_race      1898   390\n",
-      " 3 36005000100 Census Tract 1; Bronx County; New York black_race      2064   369\n",
-      " 4 36005000100 Census Tract 1; Bronx County; New York asian_race       123    60\n",
-      " 5 36005000100 Census Tract 1; Bronx County; New York kids              58    57\n",
-      " 6 36005000100 Census Tract 1; Bronx County; New York school_kids       19    20\n",
-      " 7 36005000100 Census Tract 1; Bronx County; New York male_publi…        0    13\n",
-      " 8 36005000100 Census Tract 1; Bronx County; New York male_priva…       19    20\n",
-      " 9 36005000100 Census Tract 1; Bronx County; New York female_pub…        0    13\n",
-      "10 36005000100 Census Tract 1; Bronx County; New York female_pri…        0    13\n",
-      "# ℹ 25,587 more rows\n",
-      "# ℹ Use `print(n = ...)` to see more rows\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -298,7 +277,7 @@
     }
    ],
    "source": [
-    "%%R \n",
+    "%%R -o nyc_census_data\n",
     "# the variable B01003_001E was selectd from the census table \n",
     "# for population, which we found in censusreporter here:\n",
     "# https://censusreporter.org/tables/B01003/\n",
@@ -327,56 +306,10 @@
     "                      survey=\"acs5\",\n",
     "                      geometry = F)\n",
     "\n",
-    "nyc_census_data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 83,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%R  \n",
-    "library(dplyr)\n",
+    "nyc_census_data\n",
     "\n",
-    "# Filter for public school data, sum estimates, and then reshape\n",
-    "public_school_data <- nyc_census_data %>%\n",
-    "  filter(variable %in% c(\"male_public_school\", \"female_public_school\")) %>%\n",
-    "  group_by(GEOID, NAME) %>%\n",
-    "  summarise(total_public_school = sum(estimate, na.rm = TRUE), .groups = 'drop')\n",
-    "\n",
-    "# Filter for private school data, sum estimates, and then reshape\n",
-    "private_school_data <- nyc_census_data %>%\n",
-    "  filter(variable %in% c(\"male_private_school\", \"female_private_school\")) %>%\n",
-    "  group_by(GEOID, NAME) %>%\n",
-    "  summarise(total_private_school = sum(estimate, na.rm = TRUE), .groups = 'drop')\n",
-    "\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 84,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%R \n",
-    "# Assuming nyc_census_data, public_school_data, and private_school_data are already defined\n",
-    "\n",
-    "# Convert summaries to the same long format as nyc_census_data\n",
-    "public_school_long <- public_school_data %>%\n",
-    "  mutate(variable = \"total_public_school\",\n",
-    "         estimate = total_public_school) %>%\n",
-    "  select(GEOID, NAME, variable, estimate)\n",
-    "\n",
-    "private_school_long <- private_school_data %>%\n",
-    "  mutate(variable = \"total_private_school\",\n",
-    "         estimate = total_private_school) %>%\n",
-    "  select(GEOID, NAME, variable, estimate)\n",
-    "\n",
-    "# Combine the summaries back with the original data\n",
-    "nyc_census_data <- bind_rows(nyc_census_data, public_school_long, private_school_long)\n"
+    "nyc_census_data %>% \n",
+    "    write_csv(\"nyc_census_data.csv\")\n"
    ]
   },
   {
@@ -390,213 +323,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%R \n",
+    "%%R -i nyc_census_data\n",
+    "#drop moe column   \n",
+    "nyc_census_data <- nyc_census_data %>%\n",
+    "  select(-moe)\n",
     "\n",
-    "# pivot wide \n",
-    "nyc_census_data <- nyc_census_data %>% \n",
-    "    pivot_wider(names_from = \"variable\", values_from = \"estimate\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 86,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>GEOID</th>\n",
-       "      <th>NAME</th>\n",
-       "      <th>variable</th>\n",
-       "      <th>estimate</th>\n",
-       "      <th>moe</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>36005000100</td>\n",
-       "      <td>Census Tract 1; Bronx County; New York</td>\n",
-       "      <td>population</td>\n",
-       "      <td>4446.0</td>\n",
-       "      <td>616.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>36005000100</td>\n",
-       "      <td>Census Tract 1; Bronx County; New York</td>\n",
-       "      <td>white_race</td>\n",
-       "      <td>1898.0</td>\n",
-       "      <td>390.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>36005000100</td>\n",
-       "      <td>Census Tract 1; Bronx County; New York</td>\n",
-       "      <td>black_race</td>\n",
-       "      <td>2064.0</td>\n",
-       "      <td>369.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>36005000100</td>\n",
-       "      <td>Census Tract 1; Bronx County; New York</td>\n",
-       "      <td>asian_race</td>\n",
-       "      <td>123.0</td>\n",
-       "      <td>60.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>36005000100</td>\n",
-       "      <td>Census Tract 1; Bronx County; New York</td>\n",
-       "      <td>kids</td>\n",
-       "      <td>58.0</td>\n",
-       "      <td>57.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25593</th>\n",
-       "      <td>36085990100</td>\n",
-       "      <td>Census Tract 9901; Richmond County; New York</td>\n",
-       "      <td>male_public_school</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>13.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25594</th>\n",
-       "      <td>36085990100</td>\n",
-       "      <td>Census Tract 9901; Richmond County; New York</td>\n",
-       "      <td>male_private_school</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>13.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25595</th>\n",
-       "      <td>36085990100</td>\n",
-       "      <td>Census Tract 9901; Richmond County; New York</td>\n",
-       "      <td>female_public_school</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>13.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25596</th>\n",
-       "      <td>36085990100</td>\n",
-       "      <td>Census Tract 9901; Richmond County; New York</td>\n",
-       "      <td>female_private_school</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>13.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25597</th>\n",
-       "      <td>36085990100</td>\n",
-       "      <td>Census Tract 9901; Richmond County; New York</td>\n",
-       "      <td>med_inc</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>25597 rows × 5 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "             GEOID                                          NAME  \\\n",
-       "1      36005000100        Census Tract 1; Bronx County; New York   \n",
-       "2      36005000100        Census Tract 1; Bronx County; New York   \n",
-       "3      36005000100        Census Tract 1; Bronx County; New York   \n",
-       "4      36005000100        Census Tract 1; Bronx County; New York   \n",
-       "5      36005000100        Census Tract 1; Bronx County; New York   \n",
-       "...            ...                                           ...   \n",
-       "25593  36085990100  Census Tract 9901; Richmond County; New York   \n",
-       "25594  36085990100  Census Tract 9901; Richmond County; New York   \n",
-       "25595  36085990100  Census Tract 9901; Richmond County; New York   \n",
-       "25596  36085990100  Census Tract 9901; Richmond County; New York   \n",
-       "25597  36085990100  Census Tract 9901; Richmond County; New York   \n",
-       "\n",
-       "                    variable  estimate    moe  \n",
-       "1                 population    4446.0  616.0  \n",
-       "2                 white_race    1898.0  390.0  \n",
-       "3                 black_race    2064.0  369.0  \n",
-       "4                 asian_race     123.0   60.0  \n",
-       "5                       kids      58.0   57.0  \n",
-       "...                      ...       ...    ...  \n",
-       "25593     male_public_school       0.0   13.0  \n",
-       "25594    male_private_school       0.0   13.0  \n",
-       "25595   female_public_school       0.0   13.0  \n",
-       "25596  female_private_school       0.0   13.0  \n",
-       "25597                med_inc       NaN    NaN  \n",
-       "\n",
-       "[25597 rows x 5 columns]"
-      ]
-     },
-     "execution_count": 86,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "nyc_census_data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 87,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%R\n",
+    "#pivot the data to wide format  (one row per tract)\n",
+    "nyc_census_data_wide <- nyc_census_data %>%\n",
+    "  pivot_wider(names_from = \"variable\", values_from = \"estimate\")\n",
+    "nyc_census_data_wide\n",
+    "#output the data to a csv file\n",
+    "nyc_census_data_wide %>%\n",
+    "  write_csv(\"nyc_census_data_wide.csv\")\n",
     "\n",
     "geo_code <- read.csv(\"geocoded_schools.csv\")\n",
     "\n",
     "# Merge the dataframes\n",
-    "merged_data <- merge(nyc_census_data, geo_code, by = \"GEOID\", all.x = TRUE)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 88,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%R\n",
-    "\n",
-    "# write to CSV so we can view it in python\n",
+    "merged_data <- merge(nyc_census_data_wide, geo_code, by = \"GEOID\", all.x = TRUE)\n",
     "merged_data %>% \n",
     "    write_csv(\"merged_data.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -604,20 +358,17 @@
       "text/plain": [
        "GEOID                      int64\n",
        "NAME                      object\n",
-       "moe                      float64\n",
-       "population               float64\n",
-       "white_race               float64\n",
-       "black_race               float64\n",
-       "asian_race               float64\n",
-       "kids                     float64\n",
-       "school_kids              float64\n",
-       "male_public_school       float64\n",
-       "male_private_school      float64\n",
-       "female_public_school     float64\n",
-       "female_private_school    float64\n",
+       "population                 int64\n",
+       "white_race                 int64\n",
+       "black_race                 int64\n",
+       "asian_race                 int64\n",
+       "kids                       int64\n",
+       "school_kids                int64\n",
+       "male_public_school         int64\n",
+       "male_private_school        int64\n",
+       "female_public_school       int64\n",
+       "female_private_school      int64\n",
        "med_inc                  float64\n",
-       "total_public_school      float64\n",
-       "total_private_school     float64\n",
        "Borough                   object\n",
        "Community.Board          float64\n",
        "School.Type               object\n",
@@ -638,7 +389,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
